@@ -2,10 +2,11 @@ module Remarkable
   module ActiveRecord
     module Matchers
       class AllowMassAssignmentOfMatcher < Remarkable::ActiveRecord::Base #:nodoc:
+        include Remarkable::Negative
         arguments :collection => :attributes, :as => :attribute
 
         assertion :allows?
-        collection_assertions :is_protected?, :is_accessible?
+        collection_assertions :is_accessible?, :is_protected?
 
         protected
 
@@ -13,20 +14,27 @@ module Remarkable
           # otherwise it fails.
           #
           def allows?
-            !@attributes.empty? || protected_attributes.empty?
+            return positive? unless @attributes.empty?
+            protected_attributes.empty?
           end
 
           def is_protected?
-            protected_attributes.empty? || !protected_attributes.include?(@attribute.to_s)
+            return positive? if protected_attributes.empty?
+            !protected_attributes.include?(@attribute.to_s)
           end
 
           def is_accessible?
-            accessible_attributes.empty? || accessible_attributes.include?(@attribute.to_s)
+            return positive? if accessible_attributes.empty?
+            accessible_attributes.include?(@attribute.to_s)
           end
 
           def interpolation_options
             if @subject
-              { :protected_attributes => array_to_sentence(protected_attributes.to_a, false, '[]') }
+              if positive?
+                { :protected_attributes => array_to_sentence(protected_attributes.to_a, false, '[]') }
+              else
+                { :accessible_attributes => array_to_sentence(accessible_attributes.to_a, false, '[]') }
+              end
             else
               {}
             end
